[project]
name = "asiafm-to-spotify"
version = "0.1.0"
description = "Scrape Asia FM song history and add tracks to a Spotify playlist"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "spotipy>=2.26.0",
    "streamlit>=1.57.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
